# celune

./: .gitignore  .markdownlint.json  .pylintrc  API.md  CEVOICE.md  LICENSE  README.md  VOICES.md  celune.AppImage  celune_traceback.txt  default_config.yaml  launcher.c  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build-linux.yml  build-windows.yml  ci.yml
Celune.AppDir/: .DirIcon  AppRun  celune  celune.desktop
bucket/: rubberband.json
celune/: __init__.py  analysis.py  api.py  celune.py  cevoice.py  chroma.py  colors.py  config.py  constants.py  dsp.py  exceptions.py  i18n.py  modeling.py  namedays.py  pipeline.py  runtime.py  ui.py  updater.py  utils.py
celune/backends/: __init__.py  base.py  qwen3.py  voxcpm2.py
celune/extensions/: __init__.py  base.py  manager.py
celune/refs/: balanced.pt  bold.pt  bold.sha256  calm.pt  calm.sha256  upbeat.pt  upbeat.sha256
celune/ui/: __init__.py  app.py  commands.py  headless.py  protocols.py  resources.py  terminal.py  theme.py
celune/voices/: celune.cevoice  default.cevoice
extensions/: test.py
refs/: balanced.sha256  calm.sha256  energetic.sha256  enthusiastic.sha256  neutral.sha256
resources/: VersionInfo1.res  celune.res
tests/: support.py  test_analysis_and_chroma.py  test_api_audio.py  test_backends_and_extensions.py  test_celune_core.py  test_cevoice.py  test_colors_and_dsp.py  test_config_and_utils.py  test_modeling.py  test_namedays_i18n_updater.py  test_package_api.py  test_pipeline.py  test_runtime_and_ui_commands.py
