[project]
name = "celune"
version = "3.2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
	# AI stack
    "torch==2.11.0+cu128",
    "torchaudio==2.11.0+cu128",
    # Celune sounds best with faster-qwen3-tts 0.2.4 or 0.2.6.
    # Do not use version 0.2.5. It may cause problems.
    "faster-qwen3-tts!=0.2.5",
    # If you want Celune to use the alternative VoxCPM2-based backend, install this package.
    # Note: This will fall back to voice cloning. If you want to use native Celune voices, use the Qwen3 backend.
    "voxcpm>=2.0.2,<2.1.0",
    "hf-xet",
    # Qwen3 does not support newer versions of Hugging Face libraries at this time.
    # Celune will use Transformers 4.x for the time being.
    "huggingface-hub<1.0.0",
    "transformers<5.0.0",
    # For later usage in VoxCPM2, if the optimization path is fixed.
    # Celune will gracefully reload if an AssertionError occurs during inference while using VoxCPM2.
    "triton>=3.3.0; sys_platform != 'win32'",
    "triton-windows>=3.3.0; sys_platform == 'win32'",

	# Audio processing
    "numpy",
    "scipy",
    "pedalboard",
    "pyrubberband",
    "soundfile",
    "sounddevice",

    # UX & UI
    "textual",
    "rich",
    "readchar",
    "openrgb-python",

	# Others
    "psutil",
    "pyyaml",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
