[project]
name = "celune"
version = "3.3.1"
description = "Real-time AI TTS character engine with expressive voices and high-quality playback"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "@celunah" }
]

dependencies = [
	# AI stack
    "torch==2.11.0+cu128",
    "torchaudio==2.11.0+cu128",
    # Celune sounds best with faster-qwen3-tts 0.2.4 or 0.2.6.
    # Do not use version 0.2.5. It may cause problems.
    "faster-qwen3-tts!=0.2.5",
    # If you want Celune to use the alternative VoxCPM2-based backend, install this package.
    # Note: This will fall back to voice cloning. If you want to use native Celune voices, use the Qwen3 backend.
    "voxcpm>=2.0.2,<2.1.0",
    # "I want to sound better." - she says.
    # We want to implement Fish Audio S2 Pro here.
    # "missing-library==2.0.6",
    # If not installed, Hugging Face falls back to the older Git LFS way of downloading models.
    "hf-xet",
    # Qwen3 does not support newer versions of Hugging Face libraries at this time.
    # Celune will use Transformers 4.x for the time being.
    "huggingface-hub<1.0.0",
    "transformers<5.0.0",
    # For later usage in VoxCPM2, if the optimization path is fixed.
    # "triton>=3.6.0; sys_platform == 'win32'",
    # "triton-windows>=3.6.0; sys_platform == 'win32'",

	# Audio processing
    "numpy",
    "scipy",
    "pedalboard",
    "pyrubberband",
    "soundfile",
    "sounddevice",
    # Explicitly used by the self-analysis pass, used as a dependency elsewhere.
    "librosa",

    # UX & UI
    "textual",
    "rich",
    "readchar",
    "openrgb-python",
    # Celune uses this to plot the voice graph. If developer mode is disabled, this isn't needed.
    "matplotlib",

	# Others
    "psutil",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/lunahr"
Repository = "https://github.com/lunahr/celune"
Issues = "https://github.com/lunahr/celune/issues"

# Why does CodeRabbit think I'm uploading Celune to PyPI?
# Her package is not standalone.
[tool.setuptools.package-data]
celune = ["refs/*.wav"]

# "CUDA 13.0 does exist, but I probably should wait a little more." - she says.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pyright",
    "pylint",
    "ruff",
    # If not installed, type checkers may complain.
	"types-pyyaml",
]

[tool.pyright]
typeCheckingMode = "basic"
# These checks may cause type checker errors in external libraries not managed by Celune.
reportMissingImports = false
reportPrivateImportUsage = false
